tests/valid/VarDecl_Valid_1.whiley
import whiley.lang.System

method main(System.Console sys) => void:
    int x = 1
    sys.out.println(Any.toString(x))
